# MovieGain

./: .gitignore  README.md  WORKSPACE  pubspec.yaml
android/app/: build.gradle  google-services.json
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values-v31/: styles.xml
ci/: cd_script.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: BUILD.bazel  main.dart
lib/application/deeplink_bloc/: deep_link_bloc.dart  deep_link_event.dart  deep_link_state.dart
lib/application/movies_cubit/: movies_cubit.dart  movies_state.dart
lib/core/: init_app.dart  service_locator.dart
lib/core/SharedPreference/: pereferences.dart
lib/core/constants/: api_path.dart  assets.dart  preferences_constants.dart  theme.dart
lib/core/exception/: exception.dart
lib/core/networking/: dio_client.dart
lib/core/networking/interceptors/: app_interceptor.dart
lib/data/datasources/remote/: movie_remote_datasource.dart  popular_movies_remote_datasource.dart  push_notification_remote.dart
lib/data/models/: movie_model.dart  movies_list_model.dart
lib/presentation/: compose_ui.dart
lib/presentation/components/: movie_tile.dart
lib/presentation/pages/movie_details_screen/: movie_details_screen.dart
lib/presentation/pages/movie_details_screen/components/: button_widget.dart  rate_widget.dart  reference_icon.dart
lib/presentation/pages/movies_screen/: movies_Screen.dart
lib/presentation/routes/: route_generator.dart  routes.dart
test/: widget_test.dart
(+1 files in other folders)
